Implement router and swagger ui to get a cat by ID.
